// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Message Error renders correctly 1`] = `
<test>
  <div
    class="ecl-message ecl-message--error"
    data-ecl-auto-init="Message"
    data-ecl-message=""
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--l ecl-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--error"
      />
    </svg>
    <div
      class="ecl-message__content"
    >
      <button
        class="ecl-button ecl-button--ghost ecl-message__close"
        data-ecl-message-close=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--close"
            />
          </svg>
        </span>
      </button>
      <div
        class="ecl-message__title"
      >
        Error message
      </div>
      <p
        class="ecl-message__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
      </p>
    </div>
  </div>
</test>
`;

exports[`EC - Message Info renders correctly 1`] = `
<test>
  <div
    class="ecl-message ecl-message--info"
    data-ecl-auto-init="Message"
    data-ecl-message=""
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--l ecl-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--information"
      />
    </svg>
    <div
      class="ecl-message__content"
    >
      <button
        class="ecl-button ecl-button--ghost ecl-message__close"
        data-ecl-message-close=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--close"
            />
          </svg>
        </span>
      </button>
      <div
        class="ecl-message__title"
      >
        Information message
      </div>
      <p
        class="ecl-message__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
      </p>
    </div>
  </div>
</test>
`;

exports[`EC - Message Info renders correctly with extra attributes 1`] = `
<test>
  <div
    class="ecl-message ecl-message--info"
    data-ecl-auto-init="Message"
    data-ecl-message=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--l ecl-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--information"
      />
    </svg>
    <div
      class="ecl-message__content"
    >
      <button
        class="ecl-button ecl-button--ghost ecl-message__close"
        data-ecl-message-close=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--close"
            />
          </svg>
        </span>
      </button>
      <div
        class="ecl-message__title"
      >
        Information message
      </div>
      <p
        class="ecl-message__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
      </p>
    </div>
  </div>
</test>
`;

exports[`EC - Message Info renders correctly with extra class names 1`] = `
<test>
  <div
    class="ecl-message ecl-message--info custom-button custom-button--test"
    data-ecl-auto-init="Message"
    data-ecl-message=""
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--l ecl-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--information"
      />
    </svg>
    <div
      class="ecl-message__content"
    >
      <button
        class="ecl-button ecl-button--ghost ecl-message__close"
        data-ecl-message-close=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--close"
            />
          </svg>
        </span>
      </button>
      <div
        class="ecl-message__title"
      >
        Information message
      </div>
      <p
        class="ecl-message__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
      </p>
    </div>
  </div>
</test>
`;

exports[`EC - Message Success renders correctly 1`] = `
<test>
  <div
    class="ecl-message ecl-message--success"
    data-ecl-auto-init="Message"
    data-ecl-message=""
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--l ecl-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--success"
      />
    </svg>
    <div
      class="ecl-message__content"
    >
      <button
        class="ecl-button ecl-button--ghost ecl-message__close"
        data-ecl-message-close=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--close"
            />
          </svg>
        </span>
      </button>
      <div
        class="ecl-message__title"
      >
        Success message
      </div>
      <p
        class="ecl-message__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
      </p>
    </div>
  </div>
</test>
`;

exports[`EC - Message Warning renders correctly 1`] = `
<test>
  <div
    class="ecl-message ecl-message--warning"
    data-ecl-auto-init="Message"
    data-ecl-message=""
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--l ecl-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--warning"
      />
    </svg>
    <div
      class="ecl-message__content"
    >
      <button
        class="ecl-button ecl-button--ghost ecl-message__close"
        data-ecl-message-close=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--close"
            />
          </svg>
        </span>
      </button>
      <div
        class="ecl-message__title"
      >
        Warning message
      </div>
      <p
        class="ecl-message__description"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan semper lorem, ac mollis lacus tincidunt eu. Duis scelerisque diam eu tempus fringilla.
      </p>
    </div>
  </div>
</test>
`;

exports[`EC - Message with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <div
    class="ecl-message ecl-message--info"
    data-ecl-auto-init="Message"
    data-ecl-message=""
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--l ecl-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--information"
      />
    </svg>
    <div
      class="ecl-message__content"
    >
      <button
        class="ecl-button ecl-button--ghost ecl-message__close"
        data-ecl-message-close=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--close"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </span>
      </button>
      <span
        class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
        title="[button--ghost] - ecl compliant"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#notifications--success"
          />
        </svg>
      </span>
      <div
        class="ecl-message__title"
      >
        Information message
      </div>
      <p
        class="ecl-message__description"
      />
    </div>
  </div>
  <!-- ecl2-compliance: message--info -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [message--info] -  {{ description }} needs to be set and filled in.
    </p>
  </div>
</test>
`;
